Changing user login and register to DB